# RustWeekHackathon

./: .gitignore  Cargo.toml  HACKATHON-CN.md  HACKERATHON.md  README.md  start_agentkit.sh
agentkit_layer/: Cargo.toml
agentkit_layer/src/: llm_interface.rs  main.rs
src/: main.rs
target_gpui_app/: Cargo.toml
target_gpui_app/src/: lib.rs  main.rs
