[package]
name = "target_gpui_app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "target_gpui_app"
path = "src/main.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"